[package]
name = "application"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3"
tokio = { version = "1.0", features = ["full"] }
yt-dlp = { version = "^1.2.3", features = ["tracing"] }
reqwest = { version = "0.11", features = ["json"] }
csv = "1.2"
serde = { version = "1.0", features = ["derive"] }
url = "2.4"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3