[package]
name = "application"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3"
tokio = { version = "1.0", features = ["full"] }
yt-dlp = { version = "^1.2.3", features = ["tracing"] }
reqwest = { version = "0.11", features = ["json"] }
csv = "1.2"
serde = { version = "1.0", features = ["derive"] }
url = "2.4"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = "0.4"

[lib]
name = "application"
path = "src/lib.rs"

[[bin]]
name = "application"
path = "src/main.rs"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3